# backend-api/routes/bRoutes.js
@@ -16,8 +16,11 @@ module.exports = (app) => {
     .post(UsersController.create)
     app.route("/users/:UserID")
     .get(UsersController.getByID)
-    app.route("/users/:LoginEmail")
+
+    app.route("/auth/:LoginEmail")
     .get(UsersController.getByEmail)
-    app.route("/session")
+    app.route("/sessions")
     .post(SessionsController.newSession)
+    app.route("/sessions/me")
+    .get(SessionsController.reAuthenticate)
 }
